[package]
name = "frut_lib"
version = "0.0.3"
edition = "2021"
description = "A no_std library for parsing, analyzing, and executing the Frut programming language."
license = "Apache-2.0"
authors = ["BenimFurka"]
repository = "https://github.com/BenimFurka/frut_lib"
keywords = ["programming-language", "ast", "no-std", "frut"]
categories = ["parser-implementations", "development-tools", "no-std"]

[lib]
name = "frut_lib"
path = "src/lib.rs"

crate-type = ["lib"]

[features]
default = ["std"]
std = []

[dependencies]
hashbrown = { version = "0.16", default-features = false }
linked_list_allocator = "0.10"

[[example]]
name = "base"
doc = true

[[example]]
name = "interp"
doc = true

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
